fix: input elements width collapsed #1426

--- a/packages/db-ui-elements-stencil/src/components/general.scss
+++ b/packages/db-ui-elements-stencil/src/components/general.scss
@@ -3,8 +3,6 @@
 :host {
   @extend html;
   @extend body;
-
-  display: inline-block;
 }
 
 // Set the general link color inheritance
